fixed Collapse alignment issue

--- a/kasa/src/pages/Gallery/style.scss
+++ b/kasa/src/pages/Gallery/style.scss
@@ -201,12 +201,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    align-items: center;
   }
   @media (min-width: $big-phone-screen-width) {
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 20px;
+    align-items: flex-start;
   }
 }
 
